<resources>
    <string name="app_name">Hotel Management For Android</string>
    <string name="app_room">Rooms</string>
    <string name="app_customers">Customers</string>
    <string name="app_forgottenpassword">Forgotten Password</string>
    <string name="app_homemenu">Home</string>
    <string name="app_login">Login</string>
    <string name="app_register">Register User</string>
    <string name="app_myaccount">My Account</string>
    <string name="app_address">Customer Address</string>
    <string name="app_contact">Customer Contact</string>
    <string name="app_regcustomer">Register New Customer</string>
    <string name="app_servextra">Services And Extras</string>
    <string name="app_singleroom">Room</string>
    <string name="app_singleservextra">Service And Extra</string>
    <string name="app_addroom">Room</string>
    <string name="app_addservextra">Service And Extra</string>
    <string name="app_addbooking">Booking</string>
    <string name="app_booking">Bookings</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_recovery_question">Recovery Question</string>
    <string name="hint_recovery_answer">Recovery Answer</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already Registered! Log Me In</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="strForLabelOfLoggedInUser">Username:</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>

    !-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_forgotten_password">ForgottenPasswordActivity</string>
    <string name="title_activity_bookings">BookingsActivity</string>
    <string name="title_activity_customers">CustomersActivity</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_services_and_extras">ServicesAndExtrasActivity</string>
    <string name="title_activity_single_room">SingleRoomActivity</string>
    <string name="title_activity_new_room">NewRoomActivity</string>
    <string name="title_activity_new_customer">NewCustomerActivity</string>
    <string name="title_activity_new_caddress">NewCAddressActivity</string>
    <string name="title_activity_new_ccontact">NewCContactActivity</string>
    <string name="title_activity_single_service_and_extra">SingleServiceAndExtraActivity</string>
    <string name="title_activity_new_service_and_extra">NewServiceAndExtraActivity</string>
    <string name="title_activity_new_booking">NewBookingActivity</string>

</resources>
